--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -1,47 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_primary"
+    android:orientation="vertical"
     android:weightSum="1">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
         android:layout_gravity="center"
         android:src="@drawable/splash" />
 
 
     <TextView
+        android:id="@+id/labelView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:id="@+id/labelView"
-        android:textColor="@color/white"
         android:layout_gravity="center"
-        android:textSize="45sp"/>
+        android:text="@string/app_name"
+        android:textColor="@color/white"
+        android:textSize="45sp" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_gravity="center"
         android:text="@string/loading"
-        android:id="@+id/textView"
-        android:textColor="@color/white"
-        android:layout_gravity="center" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white" />
 
     <ProgressBar
+        android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="127dp"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
+        android:layout_gravity="center_horizontal"
         android:layout_weight="0.73"
         android:indeterminate="true"
         android:indeterminateBehavior="repeat"
-        android:indeterminateOnly="true"
-        android:textAlignment="center"
         android:indeterminateDrawable="@drawable/progress"
-        android:layout_gravity="center_horizontal" />
+        android:indeterminateOnly="true"
+        android:textAlignment="center" />
 
 </LinearLayout>
