--- a/app/src/main/res/values/Colors.xml
+++ b/app/src/main/res/values/Colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="app_primary">#42bd41</color>
     <color name="app_primary_dark">#2e7d32</color>
-	<color name="white">#FFFFFFFF</color>
+    <color name="white">#FFFFFFFF</color>
     <color name="blue">#1d71b9</color>
     <color name="gray">#d3d3d3</color>
     <color name="green">#8dc63f</color>
@@ -11,10 +11,10 @@
     <color name="buttonPressed">#FFB3B7F5</color>
     <color name="rightAnswer">#5CA03C</color>
     <color name="wrongAnswer">#e23</color>
-	
+
     <color name="buttonSelected">#9e9e9e</color>
     <color name="optionsBackround">#ffd2e6ff</color>
-	<color name="black_semi_transparent">#B2000000</color>
+    <color name="black_semi_transparent">#B2000000</color>
     <color name="background">#e5e5e5</color>
     <color name="half_black">#808080</color>
     <color name="white_pressed">#f1f1f1</color>
@@ -321,7 +321,8 @@
     <color name="brown_900">#3e2723</color>
 
     <!-- GREY -->
-    <color name="grey_0">#ffffff</color> <!-- Grey 1000 (White) -->
+    <color name="grey_0">#ffffff</color>
+    <!-- Grey 1000 (White) -->
     <color name="grey_50">#fafafa</color>
     <color name="grey_100">#f5f5f5</color>
     <color name="grey_200">#eeeeee</color>
@@ -332,7 +333,8 @@
     <color name="grey_700">#616161</color>
     <color name="grey_800">#424242</color>
     <color name="grey_900">#212121</color>
-    <color name="grey_1000">#000000</color> <!-- Grey 1000 (Black) -->
+    <color name="grey_1000">#000000</color>
+    <!-- Grey 1000 (Black) -->
 
     <!-- BLUE GREY -->
     <color name="blue_grey_50">#eceff1</color>
@@ -345,9 +347,6 @@
     <color name="blue_grey_700">#455a64</color>
     <color name="blue_grey_800">#37474f</color>
     <color name="blue_grey_900">#263238</color>
-
-
-
 
 
     <color name="background_material_dark">#ff212121</color>
@@ -370,8 +369,10 @@
     <color name="dim_foreground_disabled_material_dark">#80bebebe</color>
     <color name="dim_foreground_disabled_material_light">#80323232</color>
 
-    <color name="hint_foreground_material_dark">@color/bright_foreground_disabled_material_dark</color>
-    <color name="hint_foreground_material_light">@color/bright_foreground_disabled_material_light</color>
+    <color name="hint_foreground_material_dark">@color/bright_foreground_disabled_material_dark
+    </color>
+    <color name="hint_foreground_material_light">@color/bright_foreground_disabled_material_light
+    </color>
     <!-- TODO: This is 40% alpha on the default accent color. -->
     <color name="highlighted_text_material_dark">#6640c4ff</color>
     <!-- TODO: This is 40% alpha on the default accent color. -->
@@ -490,9 +491,15 @@
     <!-- Time picker defaults when no theme is set -->
     <eat-comment />
 
-    <color name="timepicker_default_background_material">@color/primary_text_default_material_light</color>
-    <color name="timepicker_default_disabled_color_material">@color/bright_foreground_disabled_material_dark</color>
-    <color name="timepicker_default_ampm_selected_background_color_material">@color/material_light_blue_A200</color>
+    <color name="timepicker_default_background_material">
+        @color/primary_text_default_material_light
+    </color>
+    <color name="timepicker_default_disabled_color_material">
+        @color/bright_foreground_disabled_material_dark
+    </color>
+    <color name="timepicker_default_ampm_selected_background_color_material">
+        @color/material_light_blue_A200
+    </color>
     <color name="timepicker_default_selector_color_material">@color/material_light_blue_A200</color>
 
     <color name="list_item_title">#ffffffff</color>
