--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="0dp"
+        android:elevation="0dp"
         android:background="?attr/colorPrimary"
         android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -21,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/abc_action_bar_default_height_material"
             android:layout_margin="0dp"
+            android:elevation="0dp"
             app:tabIndicatorColor="@color/white" />
 
     </android.support.design.widget.AppBarLayout>
