--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,11 +5,15 @@
         <item name="colorPrimaryDark">@color/app_primary_dark</item>
         <item name="colorAccent">@color/white</item>
         <item name="actionBarStyle">@style/Theme.MyApp.ActionBar</item>
+        <item name="background">@color/app_primary</item>
+        <item name="android:windowActionBarOverlay">true</item>
     </style>
 
     <style name="Theme.MyApp.ActionBar" parent="style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="elevation">0dp</item>
         <item name="android:layout_margin">0dp</item>
+        <item name="android:minHeight">@dimen/abc_action_bar_default_height_material</item>
+        <item name="android:background">@android:color/transparent</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
