--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="martinmatko.anatomy.LanguageActivity">
+    tools:context="martinmatko.Anatom.LanguageActivity">
 
     <RadioGroup
         android:id="@+id/languages"
