--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="martinmatko.anatomy.ProfileActivity">
+    tools:context="martinmatko.Anatom.ProfileActivity">
 
     <include layout="@layout/content_profile" />
 
