--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="martinmatko.anatomy.ProfileActivity"
+    tools:context="martinmatko.Anatom.ProfileActivity"
     tools:showIn="@layout/activity_profile">
 
     <LinearLayout
